# exp-track-mono

./: .gitignore  README.md  render.yaml
.github/workflows/: ci.yml  deploy.yml
.venv-airflow/: pyvenv.cfg
.venv-airflow/Scripts/: activate  activate-global-python-argcomplete  activate.bat  get_objgraph  python-argcomplete-check-easy-install-script  register-python-argcomplete  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py  undill
auth/: .env.example  pyproject.toml  requirements.txt
auth/alembic/: README.md  env.py  script.py.mako
auth/alembic/versions/: 20241128_0001_initial_users.py
auth/app/: main.py
auth/app/api/: routes.py
auth/app/core/: config.py  security.py
auth/app/db/: __init__.py  session.py
auth/app/db/models/: user.py
auth/app/schemas/: __init__.py  auth.py  user.py
auth/tests/: test_smokey.py
expenses/: .env.example  pyproject.toml  requirements.txt
expenses/alembic/: env.py
expenses/alembic/versions/: b5c3b1b380f4_.py  (+1 more)
expenses/app/: main.py
expenses/tests/: test_smokey.py
scheduler/: requirements.txt
scheduler/dags/: sample_dag.py
scheduler/plugins/: __init__.py
users/: .env.example  pyproject.toml  requirements.txt  vercel.json
users/alembic/: env.py
users/alembic/versions/: 403370afc9b8_.py
users/app/: main.py
users/app/api/: routes.py
users/app/core/: auth.py  config.py
users/app/db/: __init__.py
users/app/db/models/: __init__.py  profile.py
users/app/schema/: user.py
(+10 files in other folders)
